--- a/woosh-photo-app/woosh-photo-app-Info.plist
+++ b/woosh-photo-app/woosh-photo-app-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.luminos.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.luminos.woosh</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -17,11 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.0.1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
@@ -54,6 +54,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>ServerEndpoint</key>
-	<string>http://192.168.1.100:8080/woosh/m/</string>
+	<string>http://ec2-54-246-64-223.eu-west-1.compute.amazonaws.com:8080/woosh/m/</string>
 </dict>
 </plist>
