added app icons

--- a/woosh-photo-app/woosh-photo-app-Info.plist
+++ b/woosh-photo-app/woosh-photo-app-Info.plist
@@ -8,6 +8,17 @@
 	<string>Woosh</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>woosh-icon-standard.png</string>
+				<string>woosh-icon-retina.png</string>
+			</array>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>com.luminos.woosh</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -17,15 +28,15 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.1</string>
+	<string>1.0.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.1</string>
+	<string>1.0.2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>ServerEndpoint</key>
-	<string>http://192.168.1.100:8080/woosh/m/</string>
+	<string>http://54.246.111.151:8080/woosh/m/</string>
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
