--- a/woosh-photo-app/woosh-photo-app-Info.plist
+++ b/woosh-photo-app/woosh-photo-app-Info.plist
@@ -37,6 +37,8 @@
 	<true/>
 	<key>ServerEndpoint</key>
 	<string>http://54.246.111.151:8080/woosh/m/</string>
+	<key>AlternateServerEndpoint</key>
+	<string>http://192.168.1.100:8080/woosh/m/</string>
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
