--- a/woosh-photo-app/woosh-photo-app-Info.plist
+++ b/woosh-photo-app/woosh-photo-app-Info.plist
@@ -29,11 +29,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.1.4</string>
+	<string>0.1.6</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.1.4</string>
+	<string>0.1.6</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
@@ -68,6 +68,6 @@
 	<key>ServerEndpoint</key>
 	<string>http://192.168.1.100:8080/woosh/m/</string>
 	<key>AltServerEndpoint</key>
-	<string>http://54.246.92.95:8080/woosh/m/</string>
+	<string>http://www.woosh.io/m</string>
 </dict>
 </plist>
