--- a/woosh-photo-app/woosh-photo-app-Info.plist
+++ b/woosh-photo-app/woosh-photo-app-Info.plist
@@ -65,9 +65,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>ServerEndpoint</key>
+	<key>ServerEndpoint2</key>
 	<string>http://192.168.1.100:8080/woosh/m/</string>
-	<key>AltServerEndpoint</key>
+	<key>ServerEndpoint</key>
 	<string>http://www.woosh.io/m</string>
 </dict>
 </plist>
